--- a/biblio.bib
+++ b/biblio.bib
@@ -41,11 +41,10 @@
 }
 
 @ARTICLE {milk,
-    author  = "Vate-U-Lan, P., Quigley, \& Masouras, P.",
-    title   = "Smart dairy farming through the {Internet of Things (IoT)}",
-    journal = "Asian International Journal of Social Sciences",
-    year    = "2016",
-    pages   = "17(3), 23 – 36"
+    author  = "Robertson, D. I. and  Bretherton, R. D.",
+    title   = "{Optimizing Networks of Traffic Signals in Real Time - The SCOOT Method}",
+    journal = "IEEE Transactions on Vehicular Technology",
+    year    = "1991",
 }
 
 @book{redes,
@@ -118,7 +117,7 @@
 }
 
 @misc{espwifi,
-    author = "Ivan Grokhotkov, Michael Molinari",
+    author = "Ivan Grokhotkov and Michael Molinari",
     title = "ESP8266 Community",
     year = "2018",
     howpublished = "\url{https://github.com/esp8266}",
