--- a/conclusao.tex
+++ b/conclusao.tex
@@ -1,8 +1,13 @@
 \chapter{Considerações finais}
 
 Os microcontroladores são versáteis e capazes de realizar as tarefas propostas neste trabalho, de monitorar e controlar o trânsito em regiões urbanas, de maneira automatizada e integrada, fazendo parte de soluções adotadas, com o intuito de tornar as experiências em locais urbanos seguras e ordenadas.
-
 Foram apresentados diferentes sistemas, cada um com uma finalidade específica, de modo a aumentar a confiabilidade no funcionamento individual. Foi desenvolvida, também, a integração entre todos os equipamentos, para atingir a sincronia entre os processos envolvidos.
+
+As simulações foram realizadas, a fim de demonstrar o impacto que o sistema integrado apresenta no fluxo veicular em um cruzamento com 4 caminhos. Os resultados obtidos nas simulações demonstraram que o sistema teve sucesso em reduzir a formação de trânsito, baseado nos parâmetros observados (duração da viagem e tempo de espera em filas).
+
+Dentre os testes realizados, duas simulações foram com o sistema agindo de modo adaptativo. O modo adaptativo utiliza detectores veiculares para definir os tempos de abertura dos semáforos, com o intuito de reduzir os tempos de duração de viagem e de espera em filas. Nas simulações no modo adaptativo, uma foi realizada com um detector e a outra com dois detectores, instalados nas vias. O uso dos detectores permite definir uma prioridade entre os fluxos que passam pelo cruzamento.
+
+Não houve melhoria significativa entre o sistema com um detector e o sistema com dois detectores, por conta das prioridades das vias, que eram igualmente balanceadas, bastando apenas um detector para realizar o controle adaptativo. Em ambiente mais complexos, um maior número de detectores pode causar um impacto mais expressivo. 
 
 
 
