--- a/main.tex
+++ b/main.tex
@@ -78,7 +78,8 @@
 
 % Título da dissertação/tese
 % e.g. \title{Sobre a conjectura $P=NP$}
-\title{Controle e monitoramento de sinalização semafórica em vias urbanas utilizando microcontroladores}
+%\title{Controle e monitoramento de sinalização semafórica em vias urbanas utilizando microcontroladores}
+\title{Controle e monitoramento de sinalização semafórica microcontrolada com modos fixo e adaptativo}
 
 % Data da defesa
 % e.g. \date{19 de fevereiro de 2003}
@@ -182,7 +183,6 @@ A mudança não virá se esperarmos por outra pessoa ou outros tempos. Nós somo
 \include{intro}
 \include{teoria}
 \include{projeto}
-\include{integracao}
 \include{simulacao}
 \include{analise_de_resultados}
 \include{conclusao}
