--- a/siglas.tex
+++ b/siglas.tex
@@ -18,4 +18,6 @@
     \acro{TBJ}{Transistor Bipolar de Junção}
     \acro{TRIAC}{\textit{Triode for Alternating Current}}
     \acro{CPU}{\textit{Central Processing Unit}}
+    \acro{SCOOT}{\textit{Split Cycle Offset Optimization Technique}}
+    \acro{SCAT}{\textit{Sydney Co-ordinated Adaptive Traffic Control}}
 \end{acronym}
